# trend-korea-api

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  API_ENDPOINTS.md  CLAUDE.md  DB_SCHEMA.md  Dockerfile  README.md  alembic.ini  crontab  docker-compose.yml  docker-entrypoint.sh  init_db.sql  pyproject.toml  test_results.json
.claude/: settings.local.json
.claude/commands/: commit.md
.claude/rules/: architecture.md  commands.md  conventions.md  git.md
docker/elasticsearch/: Dockerfile
docs/: API_DOCUMENTATION.md  API_ENDPOINTS.md  CHANGELOG.md  DB_SCHEMA.md  DEPLOYMENT.md  PIPELINE_MODULE.md  PRD.md  ROADMAP.md  SCHEDULER_DATA_FLOW.md  수집 로직 정리.md  수집 서비스 AI 개발 가이드.md  수집 서비스 개발기획서.md
migrations/: env.py
migrations/versions/: 20260215_000001_init.py  20260217_000002_add_news_channels.py  20260217_000003_add_crawled_keywords.py  24b659aec956_키워드_교집합_테이블_추가.py  5365fe70a19c_phase_a_f_metrics_컬럼_랭킹_별칭_알림_구독_캘린더_테이블.py  6a81ae02f589_생필품_상품_가격_테이블_추가.py  6f92b865ce85_chore_db_varchar_컬럼을_네이티브_enum_타입으로_변환.py  a27b8d1a6e1a_뉴스_요약_테이블_추가_batches_summaries_tags.py  c1ffbc23a48a_feat_db_뉴스_분류_시스템_신규_테이블_추가.py  c5e056319c71_네이버_뉴스_기사_테이블_추가.py
scripts/: local-cron.sh
src/: main.py  worker_main.py
src/core/: config.py  (+4 more)
tests/: conftest.py  test_auth.py  test_classifier_integration.py  test_community_comments.py  test_community_posts.py  test_events.py  test_feed.py  test_home.py  test_issues.py  test_pipeline_jobs.py  test_search.py  test_sources.py  test_tags.py  test_tracking.py  test_triggers.py  test_update_classifier.py  test_users.py
(+281 files in other folders)
