[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trend-korea-api"
version = "0.1.0"
description = "Trend Korea domain-driven FastAPI API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "alembic>=1.14.0,<2.0.0",
  "pydantic[email]>=2.10.0,<3.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "apscheduler>=3.11.0,<4.0.0",
  "python-multipart>=0.0.20,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
  "httpx>=0.28.0,<1.0.0",
  "ruff>=0.9.0,<1.0.0",
]
crawler = [
  "httpx>=0.28.0,<1.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "lxml>=5.3.0,<6.0.0",
  "kiwipiepy>=0.20.0,<1.0.0",
]

[project.scripts]
trend-korea-api = "trend_korea.main:run"
trend-korea-worker = "trend_korea.worker_main:run"
trend-korea-crawl-keywords = "trend_korea.keyword_crawler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100

target-version = "py311"
